implementando css na navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,7 @@
 <nav class="navbar">
-  <h1 class="title">Book Collection</h1>
+  <div class="title-container">
+    <img src="https://i.imgur.com/ZMsawTj.png" alt="Logo" class="navbar-logo" />
+    <h1 class="title">Coco Bambu Desafio</h1>
+  </div>
   <button class="favorites-button" (click)="goToFavorites()">Favoritos</button>
 </nav>
