--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,27 +1,45 @@
 .navbar {
   display: flex;
+  position: fixed;
+  width: 100%;
+  overflow: hidden;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
-  background-color: #7065f0;
-  color: white;
+  padding: 20px;
+  background-color: #f0effb;
+  backdrop-filter: blur(40px);
+  border: 1px solid rgba(255, 255, 255, 0.625);
+}
+
+.title-container {
+  display: flex;
+  align-items: center;
+  text-decoration: none; // Remove underline do link
+  color: inherit;
+}
+
+.navbar-logo {
+  width: 60px;
+  height: 60px;
+  margin-right: 10px;
 }
 
 .title {
   font-size: 24px;
   font-weight: bold;
+  color: #7065f0;
 }
 
 .favorites-button {
-  background-color: #fff;
-  color: #7065f0;
+  position: relative;
+  margin-right: 50px;
+  background-color: transparent;
   border: none;
-  padding: 10px;
-  border-radius: 5px;
+  color: #7065f0;
+  font-size: 16px;
   cursor: pointer;
-}
 
-.favorites-button:hover {
-  background-color: #5b4dcf;
-  color: white;
+  &:hover {
+    text-decoration: underline;
+  }
 }
