--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,5 +3,5 @@
     <img src="https://i.imgur.com/ZMsawTj.png" alt="Logo" class="navbar-logo" />
     <h1 class="title">Coco Bambu Desafio</h1>
   </div>
-  <button class="favorites-button" (click)="goToFavorites()">Favoritos</button>
+  <button class="favorites-button" (click)="goToFavorites()">♡</button>
 </nav>
