--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -2,19 +2,19 @@
   display: flex;
   position: fixed;
   width: 100%;
-  overflow: hidden;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 10px;
   background-color: #f0effb;
   backdrop-filter: blur(40px);
   border: 1px solid rgba(255, 255, 255, 0.625);
+  white-space: nowrap;
 }
 
 .title-container {
   display: flex;
   align-items: center;
-  text-decoration: none; // Remove underline do link
+  text-decoration: none;
   color: inherit;
 }
 
@@ -25,7 +25,7 @@
 }
 
 .title {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: bold;
   color: #7065f0;
 }
@@ -36,10 +36,11 @@
   background-color: transparent;
   border: none;
   color: #7065f0;
-  font-size: 16px;
+  font-size: 30px;
+  outline: none;
   cursor: pointer;
 
   &:hover {
-    text-decoration: underline;
+    text-decoration:underline;
   }
 }
