--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -1,10 +1,12 @@
 .search-bar {
+  background-color: white;
   display: flex;
   justify-content: center;
   padding: 10px;
 }
 
 input {
+  margin-top: 100px;
   padding: 10px;
   margin-right: 10px;
   width: 300px;
@@ -13,6 +15,7 @@ input {
 }
 
 button {
+  margin-top: 100px;
   padding: 10px 20px;
   background-color: #7065f0;
   color: white;
