--- a/src/app/components/book-card/book-card.component.html
+++ b/src/app/components/book-card/book-card.component.html
@@ -1,7 +1,7 @@
 <div class="book-card">
   <img [src]="book.volumeInfo.imageLinks.thumbnail" alt="Capa do livro" />
   <h2>{{ book.volumeInfo.title }}</h2>
-  <p>{{ book.volumeInfo.authors.join(", ") }}</p>
-  <p>{{ book.volumeInfo.description }}</p>
+  <p>{{ book.volumeInfo.authors.join(', ') }}</p>
+  <p>{{ book.volumeInfo.description.length > 200 ? book.volumeInfo.description.substring(0, 200) + '...' : book.volumeInfo.description }}</p>
   <button (click)="addToFavorites()">Adicionar aos Favoritos</button>
 </div>
