--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,8 +1,4 @@
 <div class="search-bar">
-  <input
-    type="text"
-    [(ngModel)]="query"
-    placeholder="Busque por título ou autor"
-  />
+  <input type="text" [(ngModel)]="query" (input)="onInputChange()" />
   <button (click)="onSearch()">Buscar</button>
 </div>
