--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -7,8 +7,8 @@
   padding: 10px;
   background-color: #f0effb;
   backdrop-filter: blur(40px);
-  border: 1px solid rgba(255, 255, 255, 0.625);
   white-space: nowrap;
+  box-shadow: 0 2px 4px rgba(193, 179, 255, 0.625);
 }
 
 .title-container {
