Logo no navbar redireciona para a pagina inicial

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -41,6 +41,11 @@
   cursor: pointer;
 
   &:hover {
-    text-decoration:underline;
+    text-decoration: underline;
   }
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
