--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,9 @@
 <nav class="navbar">
-  <div class="title-container">
-    <img src="https://i.imgur.com/ZMsawTj.png" alt="Logo" class="navbar-logo" />
-    <h1 class="title">Coco Bambu Desafio</h1>
-  </div>
+  <a href="/">
+    <div class="title-container">
+      <img src="https://i.imgur.com/ZMsawTj.png" alt="Logo" class="navbar-logo" />
+      <h1 class="title">Coco Bambu Desafio</h1>
+    </div>
+  </a>
   <button class="favorites-button" (click)="goToFavorites()">♡</button>
 </nav>
