adiciona as stars de 0 a 5 para notas

--- a/src/app/components/book-card/book-card.component.html
+++ b/src/app/components/book-card/book-card.component.html
@@ -3,5 +3,6 @@
   <h2>{{ book.volumeInfo.title }}</h2>
   <p>{{ book.volumeInfo.authors.join(', ') }}</p>
   <p>{{ book.volumeInfo.description.length > 200 ? book.volumeInfo.description.substring(0, 200) + '...' : book.volumeInfo.description }}</p>
+  <p-rating [(ngModel)]="value" />
   <button (click)="addToFavorites()">Adicionar aos Favoritos</button>
 </div>
