--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+
 * {
   font-family: "Plus Jakarta Sans", sans-serif;
 }
@@ -6,4 +9,13 @@ body {
   background-color: #f7f7fd;
   margin: 0;
   padding: 0;
+}
+
+p-rating {
+  .p-rating-icon {
+    color: #7065f0;
+  }
+  .p-rating-cancel {
+    color: #7065f0;
+  }
 }
