--- a/src/app/components/book-card/book-card.component.scss
+++ b/src/app/components/book-card/book-card.component.scss
@@ -22,11 +22,6 @@
   font-weight: 600;
   color: #080929;
   margin: 10px 0;
-  line-height: 1.4em;
-  max-height: 2.8em;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-family: "Plus Jakarta Sans", sans-serif;
 }
 
 .book-card p {
@@ -34,23 +29,18 @@
   color: #6b7280;
   line-height: 1.4;
   margin-bottom: 10px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-height: 4.2em; /* Limita a descrição para 3 linhas */
 }
 
-.book-card .description {
-  flex-grow: 1; /* Faz a descrição ocupar o espaço restante */
+.button-container {
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
+  margin-top: 10px;
 }
 
-.book-card p-rating {
-  margin-bottom: 10px;
-}
-
-.book-card button {
+button {
+  position: relative;
+  display: inline-block;
+  width: 48%;
   background-color: #7065f0;
   color: #fff;
   border: none;
@@ -59,9 +49,50 @@
   font-size: 1rem;
   cursor: pointer;
 
-  &:hover {
-    background-color: #5847c7;
+  &:hover .tooltip-text {
+    visibility: visible;
+    opacity: 1;
   }
 }
 
+button:hover {
+  background-color: #5847c7;
+}
 
+.left-button {
+  margin-right: 5px;
+}
+
+.right-button {
+  margin-left: 5px;
+}
+
+.tooltip-text {
+  visibility: hidden;
+  width: 120px;
+  background-color: #100A55;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+  font-size: 12px;
+  white-space: pre-wrap;
+}
+
+.tooltip-text::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #333 transparent transparent transparent;
+}
