--- a/src/app/components/book-card-simple/book-card-simple.component.html
+++ b/src/app/components/book-card-simple/book-card-simple.component.html
@@ -1,7 +1,6 @@
 <div class="book-card">
   <img [src]="book.volumeInfo.imageLinks.thumbnail" alt="Capa do livro" />
   <h2>{{ book.volumeInfo.title }}</h2>
-  <p-rating [(ngModel)]="value"></p-rating>
   <p>{{ book.volumeInfo.authors.join(", ") }}</p>
   <p>
     {{
@@ -11,13 +10,8 @@
     }}
   </p>
   <div class="button-container">
-    <button class="left-button" (click)="addNote()" alt="Anotações">
-      ✍🏻
-      <span class="tooltip-text">Adicionar uma Anotação</span>
-    </button>
-    <button class="middle-button" (click)="addTag()" alt="Tags">
-      🏷️
-      <span class="tooltip-text">Adicionar uma Tag</span>
+    <button class="right-button" (click)="addToFavorites()" alt="Favoritos">
+      Adicionar aos Favoritos
     </button>
   </div>
 </div>
