--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,18 @@
 <nav class="navbar">
   <a href="/">
     <div class="title-container">
-      <img src="https://i.imgur.com/ZMsawTj.png" alt="Logo" class="navbar-logo" />
+      <img
+        src="https://i.imgur.com/ZMsawTj.png"
+        alt="Logo"
+        class="navbar-logo"
+      />
       <h1 class="title">Coco Bambu Desafio</h1>
     </div>
   </a>
-  <button class="favorites-button" (click)="goToFavorites()">♡</button>
+  <div class="favorites-icon" (click)="goToFavorites()">
+    <span class="heart-icon">♡</span>
+    <span *ngIf="favoriteCount > 0" class="favorites-count">{{
+      favoriteCount
+    }}</span>
+  </div>
 </nav>
