--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -14,6 +14,11 @@
   z-index: 1000; // Ensure the navbar is on top of other components
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .title-container {
   display: flex;
   align-items: center;
@@ -31,24 +36,32 @@
   font-size: 20px;
   font-weight: bold;
   color: #7065f0;
-}
-
-.favorites-button {
-  position: relative;
-  margin-right: 50px;
-  background-color: transparent;
-  border: none;
-  color: #7065f0;
-  font-size: 30px;
-  outline: none;
-  cursor: pointer;
-
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
-a {
   text-decoration: none;
-  color: inherit;
+}
+
+.favorites-icon {
+  position: relative;
+  margin-right: 30px;
+  cursor: pointer;
+}
+
+.heart-icon {
+  font-size: 40px;
+  color: #7065f0;
+}
+
+.favorites-count {
+  position: absolute;
+  top: 5px;
+  right: -10px;
+  background-color: #7065f0;
+  border-radius: 50%;
+  color: #fff;
+  padding: 3px;
+  font-size: 10px;
+  width: 18px;
+  height: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
