--- a/src/app/components/favorites/favorites.component.html
+++ b/src/app/components/favorites/favorites.component.html
@@ -1,3 +1,4 @@
+<h1>Livros Favoritos</h1>
 <div *ngIf="favoriteBooks.length > 0" class="book-list-fav">
   <app-book-card
     *ngFor="let book of favoriteBooks"
