--- a/src/app/components/favorites/favorites.component.scss
+++ b/src/app/components/favorites/favorites.component.scss
@@ -1,10 +1,16 @@
 .book-list-fav {
-  margin-top: 80px;
+  margin-top: 10px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
   padding: 20px;
   grid-row-gap: 60px;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 110px;
+  color: #7065f0;
 }
 
 .pagination {
