--- a/src/app/components/favorites/favorites.component.scss
+++ b/src/app/components/favorites/favorites.component.scss
@@ -9,7 +9,6 @@
 
 h1 {
   text-align: center;
-  margin-top: 110px;
   color: #7065f0;
 }
 
@@ -45,4 +44,15 @@ h1 {
       cursor: not-allowed;
     }
   }
+}
+
+h4 {
+  margin-top: 90px;
+  margin-left: 15px;
+  color: #7065f0;
+}
+
+a {
+  color: #7065f0;
+  text-decoration: none;
 }
