--- a/src/app/components/book-card/book-card.component.scss
+++ b/src/app/components/book-card/book-card.component.scss
@@ -1,4 +1,5 @@
 .book-card {
+  position: relative;
   padding: 20px;
   text-align: center;
   display: flex;
@@ -159,3 +160,93 @@ button:hover {
   border-style: solid;
   border-color: #b11717 transparent transparent transparent;
 }
+
+.tag-popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+  background-color: #f7f7fd;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  max-width: 400px;
+  width: 100%;
+
+  .popup-header {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    color: #5847c7;
+  }
+
+  input {
+    padding: 10px;
+    width: 300px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    outline-color: #7065f0;
+  }
+
+  .popup-buttons {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+
+    button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .cancel-button {
+      background-color: #5847c7;
+      color: #fff;
+    }
+
+    .confirm-button {
+      background-color: #fff;
+      color: #5847c7;
+      border: 1px solid #5847c7;
+    }
+  }
+}
+
+.tags-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+
+  p {
+    color: #5847c7;
+    margin-left: 7px;
+    margin-top: 0px;
+    margin-right: 0px;
+    font-size: 8px;
+  }
+}
+
+.tag {
+  position: relative;
+  background-color: #f7f7fd;
+  border: 1px solid #5847c7;
+  border-radius: 8px;
+  padding: 2px 6px; /* Diminuímos o padding para deixar a tag menor */
+  margin: 3px; /* Ajustamos o margin para que as tags fiquem mais próximas */
+  font-size: 12px; /* Diminuímos a fonte para reduzir o tamanho da tag */
+  display: flex;
+  color: #5847c7;
+  align-items: center;
+  text-align: center;
+}
+
+.a-remove {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
