ao criar uma tag ele fecha automaticamente o pop-up e <span>'Adicionar anotação' para 'Anotações'

--- a/src/app/components/book-card/book-card.component.html
+++ b/src/app/components/book-card/book-card.component.html
@@ -30,7 +30,7 @@
     <div class="button-container">
       <button class="left-button" (click)="addNote()" alt="Anotações">
         ✍🏻
-        <span class="tooltip-text">Adicionar uma Anotação</span>
+        <span class="tooltip-text">Anotações</span>
       </button>
       <button class="middle-button" (click)="openTagPopup()" alt="Tags">
         🏷️
