--- a/src/app/components/book-card/book-card.component.html
+++ b/src/app/components/book-card/book-card.component.html
@@ -29,12 +29,12 @@
 
     <div class="button-container">
       <button class="left-button" (click)="addNote()" alt="Anotações">
-        ✍🏻
-        <span class="tooltip-text">Anotações</span>
+        Anotações
+        <span class="tooltip-text">Adicionar ou ver Anotações</span>
       </button>
       <button class="middle-button" (click)="openTagPopup()" alt="Tags">
-        🏷️
-        <span class="tooltip-text">Adicionar uma Tag</span>
+        Tags
+        <span class="tooltip-text">Adicionar Tag</span>
       </button>
     </div>
   </div>
@@ -42,10 +42,49 @@
   <!-- Popup para adicionar tag -->
   <div *ngIf="isTagPopupVisible" class="tag-popup">
     <div class="popup-header">Adicione uma #Tag</div>
-    <input type="text" [(ngModel)]="newTag" placeholder="Adicione sua nova tag aqui" />
+    <input
+      type="text"
+      [(ngModel)]="newTag"
+      placeholder="Adicione sua nova tag aqui"
+    />
     <div class="popup-buttons">
       <button class="cancel-button" (click)="closeTagPopup()">Fechar</button>
       <button class="confirm-button" (click)="addTag()">Adicionar</button>
     </div>
+  </div>
+</div>
+
+<!-- Popup para adicionar anotações -->
+<div
+  *ngIf="isNotePopupVisible"
+  class="note-popup"
+  [ngStyle]="{ bottom: notes.length === 0 ? 'auto' : '100px' }"
+>
+  <div class="popup-header">Anotações</div>
+  <div class="existing-notes" *ngIf="notes.length > 0">
+    <div *ngFor="let note of notes; let i = index" class="note">
+      <h3>{{ note.title }}</h3>
+      <p>{{ note.description }}</p>
+      <small *ngIf="note.page">Página: {{ note.page }}</small>
+      <button class="remove-note" (click)="removeNote(i)">❌</button>
+    </div>
+  </div>
+  <div class="add-note-section">
+    <input type="text" [(ngModel)]="newNoteTitle" placeholder="Título" />
+    <textarea
+      [(ngModel)]="newNoteDescription"
+      placeholder="Descrição"
+    ></textarea>
+    <input
+      type="number"
+      [(ngModel)]="newNotePage"
+      placeholder="Página (Opcional)"
+    />
+    <button class="confirm-button" (click)="addNoteToBook()">
+      Adicionar Nota
+    </button>
+  </div>
+  <div class="popup-buttons">
+    <button class="cancel-button" (click)="closeNotePopup()">Fechar</button>
   </div>
 </div>
