--- a/src/app/components/book-card/book-card.component.scss
+++ b/src/app/components/book-card/book-card.component.scss
@@ -204,14 +204,21 @@ button:hover {
     }
 
     .cancel-button {
-      background-color: #5847c7;
+      background-color: #7065f0;
       color: #fff;
+
+      &:hover {
+        background-color: #5847c7;
+      }
     }
 
     .confirm-button {
       background-color: #fff;
       color: #5847c7;
       border: 1px solid #5847c7;
+      &:hover {
+        background-color: #e1e1ff;
+      }
     }
   }
 }
@@ -235,9 +242,9 @@ button:hover {
   background-color: #f7f7fd;
   border: 1px solid #5847c7;
   border-radius: 8px;
-  padding: 2px 6px; /* Diminuímos o padding para deixar a tag menor */
-  margin: 3px; /* Ajustamos o margin para que as tags fiquem mais próximas */
-  font-size: 12px; /* Diminuímos a fonte para reduzir o tamanho da tag */
+  padding: 2px 6px;
+  margin: 3px;
+  font-size: 12px;
   display: flex;
   color: #5847c7;
   align-items: center;
@@ -250,3 +257,158 @@ button:hover {
   cursor: pointer;
 }
 
+/**** Popup de Anotações ****/
+.note-popup {
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 100%;
+  max-width: 450px;
+  max-height: 80vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  background-color: #f7f7fd;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  padding: 20px;
+  text-align: left;
+  bottom: 100px;
+  display: block;
+
+  /* Ajuste de layout para telas pequenas */
+  @media (max-width: 768px) {
+    width: 90%;
+    max-width: 400px;
+    top: 20%;
+    bottom: 150px;
+  }
+
+  .popup-header {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    color: #5847c7;
+    text-align: center;
+  }
+
+  .existing-notes {
+    margin-bottom: 20px;
+
+    .note {
+      background-color: white;
+      border: 1px solid #ddd;
+      padding: 10px;
+      border-radius: 5px;
+      margin-bottom: 10px;
+      position: relative;
+      word-break: break-word;
+      overflow: hidden;
+
+      h3 {
+        font-size: 1.2rem;
+        margin-bottom: 5px;
+      }
+
+      p {
+        font-size: 1rem;
+        color: #333;
+      }
+
+      small {
+        font-size: 0.85rem;
+        color: #888;
+      }
+
+      .remove-note {
+        position: absolute;
+        top: 1%;
+        right: 0;
+        margin-right: -70px;
+        background: none;
+        border: none;
+        font-size: 16px;
+        color: red;
+        cursor: pointer;
+
+        &:hover {
+          color: darkred;
+        }
+
+        @media (max-width: 768px) {
+          margin-right: -50px;
+        }
+      }
+    }
+  }
+
+  .add-note-section {
+    margin-bottom: 10px;
+
+    input,
+    textarea {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      margin-bottom: 10px;
+      font-size: 1rem;
+      outline-color: #7065f0;
+    }
+
+    textarea {
+      height: 80px;
+      resize: none;
+      outline-color: #7065f0;
+    }
+
+    .confirm-button {
+      background-color: white;
+      color: #5847c7;
+      border: 1px solid #5847c7;
+      padding: 10px;
+      width: 100%;
+      border-radius: 5px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s;
+
+      &:hover {
+        background-color: #e1e1ff;
+      }
+    }
+  }
+
+  .popup-buttons {
+    display: flex;
+    justify-content: center;
+
+    .cancel-button {
+      background-color: #7065f0;
+      color: white;
+      border: none;
+      padding: 10px;
+      width: 100%;
+      border-radius: 5px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s;
+
+      &:hover {
+        background-color: #5847c7;
+      }
+    }
+  }
+}
+
+/* Fundo escurecido */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
