--- a/src/app/components/book-card/book-card.component.scss
+++ b/src/app/components/book-card/book-card.component.scss
@@ -107,18 +107,19 @@ button:hover {
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  position: relative;
 }
 
 .remove-btn {
-  margin-top: 10px;
-  margin-left: 10px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
   font-size: 16px;
   color: red;
   background: none;
   border: none;
   cursor: pointer;
   z-index: 10;
-  position: relative;
   transition: color 0.3s ease;
 
   &:hover {
@@ -141,9 +142,8 @@ button:hover {
   padding: 3px 0;
   position: absolute;
   z-index: 1;
-  bottom: -10px;
-  left: 48%;
-  margin-left: -60px;
+  bottom: 40px;
+  margin-left: auto;
   opacity: 0;
   transition: opacity 0.3s;
   font-size: 12px;
@@ -407,8 +407,22 @@ button:hover {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
+  display: none;
+  pointer-events: auto;
+}
+
+.overlay.active {
+  display: block;
+}
+
+body.overlay-active {
+  pointer-events: none;
+}
+
+body.overlay-active .overlay {
+  pointer-events: auto;
 }
