implementacao do filtro e busca por titulo da nota ou tags

--- a/src/app/components/book-card/book-card.component.html
+++ b/src/app/components/book-card/book-card.component.html
@@ -5,6 +5,7 @@
     <h2>{{ book.volumeInfo.title }}</h2>
     <p-rating
       [(ngModel)]="value"
+      [cancel]="false"
       (onRate)="onRatingChange($event.value)"
     ></p-rating>
     <p>{{ book.volumeInfo.authors.join(", ") }}</p>
